plugins {
	id 'fabric-loom' version '1.14.5'
	id 'maven-publish'
	id 'eclipse'
	id 'idea'
	id 'java-library'
}

version = project.mod_version
group = project.group_name

base {
	archivesName = "${project.mod_id}-${project.minecraft_version}"
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
	withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "-Xlint:all,-processing,-deprecation,-this-escape" << "-Werror"
	options.encoding = 'UTF-8'
	options.release.set(21)
}

loom {
	accessWidenerPath = file("src/main/resources/${project.mod_id}.accesswidener")
	splitEnvironmentSourceSets()

	runs {
		client {
			client()
			setConfigName("Client")
			ideConfigGenerated(true)
			runDir("run")
		}

		server {
			server()
			setConfigName("Server")
			ideConfigGenerated(true)
			runDir("run")
		}

		datagen {
			inherit client
			name "Data Generation"
			runDir "run-data"
			vmArg "-Dfabric-api.datagen"
			vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated/resources")}"
			vmArg "-Dfabric-api.datagen.modid=${project.mod_id}"
		}
	}
}

sourceSets {
	main {
		resources {
			srcDir 'src/generated/resources'
		}
	}

	client {
		resources {
			srcDir 'src/client/resources'
		}
	}
}

repositories {
	maven { url = "https://maven.fabricmc.net/" }
	mavenCentral()
	maven { // Beanification
		url = "https://maven.tamaized.com/releases/"
	}
	maven { // JEI
		name = "Jared's Maven"
		url = "https://maven.blamejared.com/"
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()

	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// Optional runtime/compile-time integrations.
	modCompileOnly "mezz.jei:jei-${project.minecraft_version}-fabric:${project.jei_version}"
	compileOnly "javax.annotation:javax.annotation-api:1.3.2"
	compileOnly "com.google.code.findbugs:jsr305:3.0.2"
	compileOnly "com.google.errorprone:error_prone_annotations:2.21.1"

	testImplementation "tamaized:beanification:${project.beanification_version}:tests"
	testCompileOnly "tamaized:beanification:${project.beanification_version}:test-sources"
	testImplementation "org.junit.jupiter:junit-jupiter:5.10.3"
	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.3"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.10.3"
	testImplementation "org.mockito:mockito-junit-jupiter:5.12.0"
}

processResources {
	inputs.property "version", project.version
	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}
}

test {
	useJUnitPlatform()
	systemProperty "junit.jupiter.extensions.autodetection.enabled", "true"
}
